# Calculator

./: .gitignore  Cargo.toml  README.md  build.rs
src/: calc.rs  main.rs  ui.slint
