[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
# Slint cần thiết cho UI
slint = "1.3" 
# Thư viện để ghi log đơn giản, hữu ích cho debugging
log = "0.4"
env_logger = "0.10"

# Build dependencies cho Slint (để biên dịch file .slint)
[build-dependencies]
slint-build = "1.3"
